--- a/AZDORestApiExplorer.Accounts/AZDORestApiExplorer.Accounts.csproj
+++ b/AZDORestApiExplorer.Accounts/AZDORestApiExplorer.Accounts.csproj
@@ -3,24 +3,25 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
         <!--<TargetFrameworks>net5.0-windows;net48</TargetFrameworks>-->
-        <TargetFrameworks>net6.0-windows</TargetFrameworks>        <UseWPF>true</UseWPF>
+        <TargetFrameworks>net6.0-windows</TargetFrameworks>        
+        <UseWPF>true</UseWPF>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <UserSecretsId>5ce9505c-9c0d-422c-b70d-b541f37dbb4a</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DevExpress.Wpf.Core" Version="21.1.4" />
-        <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="21.1.4" />
-        <PackageReference Include="DevExpress.Wpf.Docking" Version="21.1.4" />
-        <PackageReference Include="DevExpress.Wpf.Grid" Version="21.1.4" />
-        <PackageReference Include="DevExpress.Wpf.NavBar" Version="21.1.4" />
-        <PackageReference Include="DevExpress.Wpf.Ribbon" Version="21.1.4" />
+        <PackageReference Include="DevExpress.Wpf.Core" Version="22.1.3" />
+        <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="22.1.3" />
+        <PackageReference Include="DevExpress.Wpf.Docking" Version="22.1.3" />
+        <PackageReference Include="DevExpress.Wpf.Grid" Version="22.1.3" />
+        <PackageReference Include="DevExpress.Wpf.NavBar" Version="22.1.3" />
+        <PackageReference Include="DevExpress.Wpf.Ribbon" Version="22.1.3" />
         <PackageReference Include="Prism.Unity" Version="8.1.97" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="VNC.Core" Version="2.1.0" />
-        <!--<ProjectReference Include="..\..\VNC\VNC.Core\VNC.Core.csproj" />-->
+        <!--<PackageReference Include="VNC.Core" Version="2.1.5" />-->
+        <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
     </ItemGroup>
     
     <ItemGroup>
