--- a/AZDORestApiExplorer.Audit/AZDORestApiExplorer - Backup.Audit.csproj
+++ b/AZDORestApiExplorer.Audit/AZDORestApiExplorer - Backup.Audit.csproj
@@ -24,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <!--<PackageReference Include="VNC.Core" Version="2.1.5" />-->
-        <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
+        <PackageReference Include="VNC.Core" Version="2.1.0" />
+        <!--<ProjectReference Include="..\..\VNC\VNC.Core\VNC.Core.csproj" />-->
     </ItemGroup>
     
     <ItemGroup>
