--- a/AZDORestApiExplorer.Security/AZDORestApiExplorer - Backup.Security.csproj
+++ b/AZDORestApiExplorer.Security/AZDORestApiExplorer - Backup.Security.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <!--<TargetFrameworks>net5.0-windows;net48</TargetFrameworks>-->
-        <TargetFrameworks>net6.0-windows</TargetFrameworks>
-        <UseWPF>true</UseWPF>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    </PropertyGroup>
+  <PropertyGroup>
+      <!--<TargetFrameworks>net5.0-windows;net48</TargetFrameworks>-->
+      <TargetFrameworks>net6.0-windows</TargetFrameworks>
+      <UseWPF>true</UseWPF>
+      <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="DomainServices\Interfaces\" />
@@ -24,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <!--<PackageReference Include="VNC.Core" Version="2.1.5" />-->
-        <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
+        <PackageReference Include="VNC.Core" Version="2.1.0" />
+        <!--<ProjectReference Include="..\..\VNC\VNC.Core\VNC.Core.csproj" />-->
     </ItemGroup>
     
     <ItemGroup>
