--- a/AZDORestApiExplorer/App.config
+++ b/AZDORestApiExplorer/App.config
@@ -96,7 +96,7 @@
                 Version=6.0.0.0,
                 Culture=neutral,
                 PublicKeyToken=d702d1a3426498a0"
-				fileName="C:\temp\logs\VNCLogViewer.log"
+				fileName="C:\temp\logs\AZDORestApiExplorer.log"
 				header="" footer=""
 				formatter="FlatFile Formatter"
 				traceOutputOptions="None" />
@@ -138,8 +138,8 @@
 
 			<add
                 name="SignalRCoreListener"
-                type="VNC.Logging.TraceListeners.SignalRCoreListener,
-                       VNC.Logging.TraceListeners.SignalRCoreListener,
+                type="VNC.Logging.TraceListeners.SignalRCoreListenerSendAsync,
+                       VNC.Logging.TraceListeners.SignalRCoreListeners,
                        Version=1.0.0.0,
                        Culture=neutral,
                        PublicKeyToken=6621de8a79b51ca3"
