--- a/AZDORestApiExplorer/App.config
+++ b/AZDORestApiExplorer/App.config
@@ -12,8 +12,7 @@
             name="loggingConfiguration"
             type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings,
                 Microsoft.Practices.EnterpriseLibrary.Logging, 
-				Version=6.0.0.0, Culture=neutral, 
-				PublicKeyToken=d702d1a3426498a0" />
+				Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0" />
 
     </configSections>
 
@@ -87,15 +86,11 @@
 			<add
 				name="FlatFile TraceListener"
 				type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,
-                Microsoft.Practices.EnterpriseLibrary.Logging,
-                Version=6.0.0.0,
-                Culture=neutral,
-                PublicKeyToken=d702d1a3426498a0"
+                    Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
 				listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,
-                Microsoft.Practices.EnterpriseLibrary.Logging,
-                Version=6.0.0.0,
-                Culture=neutral,
-                PublicKeyToken=d702d1a3426498a0"
+                    Microsoft.Practices.EnterpriseLibrary.Logging,
+                Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
 				fileName="C:\temp\logs\AZDORestApiExplorer.log"
 				header="" footer=""
 				formatter="FlatFile Formatter"
@@ -123,14 +118,10 @@
                 name="Rolling FlatFile TraceListener"
                 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener,
                        Microsoft.Practices.EnterpriseLibrary.Logging,
-                       Version=6.0.0.0,
-                       Culture=neutral,
-                       PublicKeyToken=d702d1a3426498a0"
+                       Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData,
                     Microsoft.Practices.EnterpriseLibrary.Logging,
-                    Version=6.0.0.0,
-                    Culture=neutral,
-                    PublicKeyToken=d702d1a3426498a0"
+                    Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
                 fileName="C:\temp\logs\AZDORestApiExplorer.log"
                 header="" footer=""
                 rollInterval="Day" maxArchivedFiles="7"
@@ -140,14 +131,10 @@
                 name="SignalRCoreListener"
                 type="VNC.Logging.TraceListeners.SignalRCoreListenerSendAsync,
                        VNC.Logging.TraceListeners.SignalRCoreListeners,
-                       Version=1.0.0.0,
-                       Culture=neutral,
-                       PublicKeyToken=6621de8a79b51ca3"
+                       Version=1.0.0.0, Culture=neutral, PublicKeyToken=6621de8a79b51ca3"
                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,
                     Microsoft.Practices.EnterpriseLibrary.Logging,
-                    Version=6.0.0.0,
-                    Culture=neutral,
-                    PublicKeyToken=d702d1a3426498a0"
+                    Version=6.0.0.0, Culture=neutral, PublicKeyToken=d702d1a3426498a0"
                 formatter="LiveView Formatter" />
 		</listeners>
 
